--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <html lang="en">
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="static/css/style.css">
 <meta content="utf-8" http-equiv="encoding">
 
 <head>
 	<title>document</title>
 </head>
 <body>
+	<div class="flex-container">
+<button class="btn btn-dark"> <a href="challenge1.html"> Years into Days</a></button>
+<button class="btn btn-dark"> <a href="rockpaper.html"> Rock paper Scissors</a></button>
+<button class="btn btn-dark"> <a href="btnchage.html"> Color change </a></button>
+</div>
 
-	<script src="index.js"> </script>
 
 </body>
 </html>
