--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <button class="btn btn-dark"> <a href="challenge1.html"> Years into Days</a></button>
 <button class="btn btn-dark"> <a href="rockpaper.html"> Rock paper Scissors</a></button>
 <button class="btn btn-dark"> <a href="btnchage.html"> Color change </a></button>
+<button class="btn btn-dark"> <a href="blackjack.html"> blackjack </a></button>
+
 </div>
 
 
